--- a/network/docker-compose-base.yaml
+++ b/network/docker-compose-base.yaml
@@ -1,7 +1,8 @@
 version: '2.1'
 
 services:
-  peer-base: # peer的公共服务
+  peer-base:
+    # peer的公共服务
     image: hyperledger/fabric-peer:1.4.12
     environment:
       - GODEBUG=netdns=go
@@ -13,7 +14,8 @@ services:
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_network # docker 网络
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
-    command: peer node start
+    working_dir: /chaincode
+    command: peer node start --peer-chaincodedev=true
     networks:
       - fabric_network
+    RUN:
